implatação de todo o corpo da page com formulario e texto informativo

--- a/style.css
+++ b/style.css
@@ -1,59 +1,176 @@
-*{
-    margin: 0px;
-    padding: 0px;
+:root{
+    --azul-DNC: #0c70f2;
+    --black-DNC: #303030;
+    --cinza-hover: #c9c9c9;
+    --font: 'Inter'
 }
 
-    #menuHead{
-        width: 100%;
-        height: 92px;
-        background-color: #303030;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #BABABA;
+    body{
+        margin: 0px;
+        padding: 0px;
+        
+        background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
+        background-repeat: no-repeat ;
     }
 
-
-        #menuLink{
+        #menuHead{
+            width: 100%;
+            height: 92px;
+            background-color:var(--black-DNC);
             display: flex;
-            width: 45%;
-            justify-content: space-around;
+            justify-content: space-between;
             align-items: center;
-            margin-left: 6%;
+            border-bottom: 1px solid #BABABA;
         }
 
-            #menuLink a{
-                text-decoration: none;
-                font-family: 'Inter';
+
+            #menuLink{
+                display: flex;
+                width: 45%;
+                justify-content: space-around;
+                align-items: center;
+                margin-left: 6%;
+            }
+
+                #menuLink a{
+                    text-decoration: none;
+                    font-family: var(--font);
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 20px;
+                    line-height: 30px;    
+                    color: #FFFFFF;
+                }
+
+                #menuLink a:hover{
+                    color: var(--cinza-hover);
+                }
+
+            #menuHead button{
+                width: 80px;
+                height: 40px;
+                background-color: var(--azul-DNC);
+                border: 0px;
+                color: #FFFFFF;
+                margin-right: 6%;
+                box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
+                font-family: var(--font);
                 font-style: normal;
                 font-weight: 600;
-                font-size: 20px;
-                line-height: 30px;    
-                color: #FFFFFF;
+                font-size: 18px;
+                line-height: 24px;
+                cursor: pointer;
             }
 
-            #menuLink a:hover{
-                color: #cccccc;
-            }
+                #menuHead button:hover{
+                    width: 82px;
+                    height: 42px;
+                }
 
-        #menuHead button{
-            width: 80px;
-            height: 40px;
-            background-color: #0C70F2;
-            border: 0px;
-            color: #FFFFFF;
-            margin-right: 6%;
-            box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
-            font-family: 'Inter';
+        #sectionCenter{
+            font-family: var(--font);
             font-style: normal;
-            font-weight: 600;
-            font-size: 18px;
-            line-height: 24px;
-            cursor: pointer;
+            color: #FFFFFF;
+            display: flex;
+            flex-direction: column;
+            align-items: center ;
+            margin-top: 100px;
+            margin-bottom: 100px;
         }
 
-            #menuHead button:hover{
-                width: 82px;
-                height: 42px;
+            #titleSectionCenter{
+                font-weight: 800;
+                font-size: 80px;
+                line-height: 97px;
+                text-align: center;
+                margin-bottom: 20px;
             }
 
+            #textSectionCenter{                
+                font-weight: 500;
+                font-size: 40px;
+                line-height: 48px;
+                margin-bottom: 191px;
+                text-align: center;
+            }
+
+                .destac{
+                    text-transform: uppercase;
+                    font-weight: bolder;
+                    background-color: black;
+                    padding: 5px;
+                }
+           
+
+            .formLabel{
+                font-weight: 600;
+                font-size: 30px;
+                line-height: 36px;
+                display: flex;
+                flex-direction: column;
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+
+            .formLabel label{
+                margin: 10px 0px 10px 0px;
+            }
+
+            .inputText{
+                height: 52px;
+                padding-left: 20px;
+                font-weight: 400;
+                font-size: 20px;
+                line-height: 24px;
+                color: rgba(57, 57, 57, 0.5);
+                background: rgba(255, 255, 255, 0.9);
+                border-radius: 10px;
+                border: 0px;
+            }
+
+            #inputCheckbox{
+                margin: 0px;
+                padding: 0px;
+                display: flex;
+                list-style: none;
+                width: 630px;
+                height: 56px;
+                justify-content: space-between;
+                font-weight: 600;
+                font-size: 25px;
+                line-height: 30px;
+            }
+                
+                #inputCheckbox li input{
+                    width: 20px;
+                    height: 22px;
+                    background: #FFFFFF;
+                    border: 2px solid #CCCCCC;
+                    align-items: center;
+                }
+
+            #buttonSubmit{
+                width: 630px;
+                height: 56px;
+                border: 0px;
+                background: var(--azul-DNC);
+                box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+                border-radius: 10px;
+                font-weight: 600;
+                font-size: 32px;
+                line-height: 39px;
+                color: #FFFFFF;
+                margin: 89px 1%;
+
+            }
+
+
+            #sectionRodape{
+                display: flex;
+                justify-content: space-around;
+            }
+
+            #linkRodape{
+                text-decoration: none;
+                list-style: none;
+            }
