Finalização da Responsividade

--- a/style.css
+++ b/style.css
@@ -291,4 +291,13 @@
     #inputCheckbox li{
         align-items: center;
     }
+
+    footer .linhaOne{
+        flex-direction: column;
+    }
+
+    footer .endereco{
+        width: 95%;
+        margin-bottom:20px;
+    }
 }
